C'est la dernière page et pas une partie de la couverture

--- a/album.tex
+++ b/album.tex
@@ -94,7 +94,7 @@
 % Images latex
 \input{photos.tex}
 
-% Deuxième de couverture (vide)
+% dernière page (vide)
 \newpage
 \pagecolor{pitchblack}
 \vspace{\baselineskip}
